Email and name of employee should now update on the user view page

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -96,8 +96,8 @@
     <main>
       <section class="card">
         <div class="card-title-wrapper">
-          <h2 class="title-card">Neumann</h2>
-          <h2 class="title-card">Account</h2>
+          <h2 id="title-card">Neumann</h2>
+          <h2 id="title-card">Account</h2>
         </div>
         <div class="card-image-wrapper">
           <hr class="solid">
@@ -132,7 +132,7 @@
             <hr class="solid">
             <h1 class="h1">My Email</h1>
             <label for="email-box" class="label-subtext">This is your assigned company email</label>
-            <label class="email-box">f.batmaz@lboro.ac.uk</label>
+            <label id="email-box">f.batmaz@lboro.ac.uk</label>
             <img class="email-lock-img" src="../lock.png" alt="" />
           </div>
           <div class="wrapper-invite">
