--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -185,11 +185,11 @@
       <form method="dialog" id="password-form">
         <div id="new-password-div">
           <label for="new-password" class="upload-class-text">New password:</label>
-          <input type="text" id="new-password" name="new-password" placeholder="Password"><br><br>
+          <input type="password" id="new-password" name="new-password" placeholder="Password"><br><br>
         </div>
         <div class="confirm-password-div">
           <label for="confirm-password" class="upload-class-text">Confirm Password:</label>
-          <input type="text" id="confirm-password" name="confirm-password" placeholder="Confirm password"><br><br>
+          <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm password"><br><br>
         </div>
         <div>
           <button id="cancelBtn" value="cancel">Cancel</button>
