Both profile pages now display the correct status for the employee (e.g., employee, team leader or manager)

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -102,7 +102,7 @@
         <div class="card-image-wrapper">
           <hr class="solid">
         <!--This part below will eventually only need to show if the user is actually a manager-->
-          <h1 class="heirarchy-card">Manager</h1>
+          <h1 id="heirarchy-card">Manager</h1>
           <img id="card-profile-picture" src="https://ui-avatars.com/api/?name=Neumann&background=random&size=50&format=svg" alt="" />
         </div>
         <div class="card-button-wrapper">
