--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="/base.css" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="script.js"></script>
 
     <title>Profile</title>
   </head>
@@ -107,7 +106,7 @@
         <div class="card-image-wrapper">
           <hr class="solid">
         <!--This part below will only need to show if the user is actually a manager-->
-          <h1 class="heirarchy-card">Manager</h1>
+          <h1 id="heirarchy-card">Manager</h1>
           <img id="card-profile-picture" src="https://ui-avatars.com/api/?name=Neumann&background=random&size=50&format=svg" alt="" />
         </div>
         <div class="wrapper-email">
@@ -134,5 +133,6 @@
         <input type="submit">
       </form>
     </dialog> --> 
+    <script type="module" src="script.js"></script>
   </body>
 </html>
