Logout button is now functional for the edit profile page

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -145,7 +145,7 @@
             <hr class="solid">
           </div>
           <div class ="wrapper-logout">
-            <button class="logout-btn" onclick="location.href='/login/'">
+            <button class="logout-btn">
               <p>Logout</p>
             </button>
           </div>
