--- a/web/project/index.html
+++ b/web/project/index.html
@@ -159,15 +159,15 @@
         <div class="card-title-wrapper">
           <h2 class="title-card">Tasks</h2>
           <div class="flex-row">
-            <button
+            <!-- <button
               class="btn-action"
               data-secondary
               data-action="filter-tasks"
             >
               <p>Filter By</p>
               <span class="material-symbols-outlined">filter_list</span>
-            </button>
-            <button class="btn-action" data-action="new-task">
+            </button> -->
+            <button class="btn-action" data-action="new-task" id="add-task">
               <p>New Task</p>
               <span class="material-symbols-outlined">add</span>
             </button>
