--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <dialog class="nav-mobile">
+    <!-- <dialog class="nav-mobile">
       <div class="flex-row kanban-title">
         <h2>Menu</h2>
         <button class="btn-icon material-symbols-outlined dialog-close">
@@ -54,28 +54,34 @@
           </li>
         </ul>
       </nav>
-    </dialog>
+    </dialog> -->
     <aside class="side-menu">
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
           <li data-active>
-            <a href="/dashboard/" class="material-symbols-outlined"
-              >leaderboard</a
-            >
+            <a href="/dashboard/">
+              <span class="material-symbols-outlined">leaderboard</span>
+              <span class="nav-description">Task Dashboard</span>
+            </a>
           </li>
           <li>
-            <a href="/manager/" class="material-symbols-outlined">surfing</a>
+            <a href="/manager/">
+              <span class="material-symbols-outlined">surfing</span>
+              <span class="nav-description">Manager Dashboard</span>
+            </a>
           </li>
           <li>
-            <a href="/knowledge/" class="material-symbols-outlined"
-              >menu_book</a
-            >
+            <a href="/knowledge/">
+              <span class="material-symbols-outlined">menu_book</span>
+              <span class="nav-description">Knowledge</span>
+            </a>
           </li>
           <li>
-            <a href="/profile/" class="material-symbols-outlined"
-              >manage_accounts</a
-            >
+            <a href="/profile/">
+              <span class="material-symbols-outlined">manage_accounts</span>
+              <span class="nav-description">My Profile</span>
+            </a>
           </li>
         </ul>
       </nav>
