--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -12,45 +12,7 @@
     <title>Profile page</title>
   </head>
 
-  <body>    <dialog class="nav-mobile">
-      <div class="flex-row kanban-title">
-        <h2>Menu</h2>
-        <button class="btn-icon material-symbols-outlined dialog-close">
-          close
-        </button>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="/manager/">
-              <span class="material-symbols-outlined">leaderboard</span>
-              Dashboard
-            </a>
-            <hr />
-          </li>
-          <li>
-            <a href="/manager/">
-              <span class="material-symbols-outlined">surfing</span>
-              Managers
-            </a>
-            <hr />
-          </li>
-          <li>
-            <a href="/knowledge/">
-              <span class="material-symbols-outlined">menu_book</span>
-              Knowledge
-            </a>
-            <hr />
-          </li>
-          <li>
-            <a href="/profile/" data-active>
-              <span class="material-symbols-outlined">manage_accounts</span>
-              My Profile
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </dialog>
+  <body>   
     <aside class="side-menu">
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
