Changed values to rem/em and percents etc.

--- a/web/profile/edit/index.html
+++ b/web/profile/edit/index.html
@@ -107,7 +107,7 @@
             <hr class="solid">
           </div>
           <div class ="wrapper-logout">
-            <button class="logout-btn">
+            <button class="logout-btn" id="logout"> 
               <p>Logout</p>
             </button>
           </div>
