client page link outbound symbol

--- a/web/client/index.html
+++ b/web/client/index.html
@@ -88,7 +88,10 @@
                 <a href="" id="client-email" target="_blank">
                   Contact via email</a
                 >
-                <a href="" id="client-web" target="_blank">Access website</a>
+                <a href="" id="client-web" target="_blank"
+                  >Access website
+                  <span class="material-symbols-outlined">outbound</span></a
+                >
               </div>
             </div>
           </div>
