profile-pic class

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -50,6 +50,7 @@
         <img
           src="https://placekitten.com/50/50"
           alt="User Profile Picture"
+          class="profile-pic"
           width="50"
           height="50"
         />
@@ -72,6 +73,7 @@
             id="card-profile-picture"
             src="https://ui-avatars.com/api/?name=Neumann&background=random&size=50&format=svg"
             alt=""
+            class="profile-pic"
           />
         </div>
         <div class="wrapper-email">
