--- a/web/client/index.html
+++ b/web/client/index.html
@@ -52,6 +52,7 @@
         <img
           src="https://placekitten.com/50/50"
           alt="User Profile Picture"
+          class="profile-pic"
           width="50"
           height="50"
         />
@@ -70,7 +71,7 @@
               <img
                 src=""
                 alt="profile"
-                class="card-small-image"
+                class="card-small-image profile-pic"
                 id="client-image"
               />
               <p class="card-small-text" id="client-representative"></p>
