--- a/web/project/index.html
+++ b/web/project/index.html
@@ -53,6 +53,7 @@
         <img
           src="https://placekitten.com/50/50"
           alt="User Profile Picture"
+          class="profile-pic"
           width="50"
           height="50"
         />
@@ -94,7 +95,7 @@
             <img
               src="https://placekitten.com/50/50"
               alt=""
-              class="card-small-image"
+              class="card-small-image profile-pic"
             />
             <p class="card-small-text" id="project-leader"></p>
           </div>
@@ -106,7 +107,7 @@
             <img
               src="https://placekitten.com/50/50"
               alt=""
-              class="card-small-image"
+              class="card-small-image profile-pic"
             />
             <p class="card-small-text" id="client-name"></p>
             <div class="link-list text-center">
