--- a/web/template.html
+++ b/web/template.html
@@ -88,6 +88,7 @@
         <img
           src="https://placekitten.com/50/50"
           alt="User Profile Picture"
+          class="profile-pic"
           width="50"
           height="50"
         />
