--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -28,7 +28,9 @@
           </li>
           <li>
             <a href="/manager/">
-              <span class="material-symbols-outlined">surfing</span>
+              <span class="material-symbols-outlined">
+                admin_panel_settings
+              </span>
               <span class="nav-description">Manager Dashboard</span>
             </a>
           </li>
