--- a/web/project/index.html
+++ b/web/project/index.html
@@ -21,23 +21,31 @@
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
-          <li>
-            <a href="/dashboard/" class="material-symbols-outlined"
-              >leaderboard</a
-            >
+          <li data-active>
+            <a href="/dashboard/">
+              <span class="material-symbols-outlined">leaderboard</span>
+              <span class="nav-description">Task Dashboard</span>
+            </a>
           </li>
           <li>
-            <a href="/manager/" class="material-symbols-outlined">surfing</a>
+            <a href="/manager/">
+              <span class="material-symbols-outlined">
+                admin_panel_settings
+              </span>
+              <span class="nav-description">Manager Dashboard</span>
+            </a>
           </li>
           <li>
-            <a href="/knowledge/" class="material-symbols-outlined"
-              >menu_book</a
-            >
+            <a href="/knowledge/">
+              <span class="material-symbols-outlined">menu_book</span>
+              <span class="nav-description">Knowledge</span>
+            </a>
           </li>
           <li>
-            <a href="/profile/" class="material-symbols-outlined"
-              >manage_accounts</a
-            >
+            <a href="/profile/">
+              <span class="material-symbols-outlined">manage_accounts</span>
+              <span class="nav-description">My Profile</span>
+            </a>
           </li>
         </ul>
       </nav>
