project page client images

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -92,27 +92,28 @@
         <div class="card-small">
           <h3 class="title-card-small text-center">Team leader</h3>
           <div class="flex-col-center">
-            <img
-              src="https://placekitten.com/50/50"
-              alt=""
-              class="card-small-image profile-pic"
-            />
-            <p class="card-small-text" id="project-leader"></p>
+            <a>
+              <img
+                src="https://placekitten.com/50/50"
+                alt=""
+                class="card-small-image profile-pic"
+              />
+              <p class="card-small-text" id="project-leader"></p>
+            </a>
           </div>
         </div>
 
         <div class="card-small">
           <h3 class="title-card-small text-center">Client details</h3>
           <div class="flex-col-center">
-            <img
-              src="https://placekitten.com/50/50"
-              alt=""
-              class="card-small-image profile-pic"
-            />
-            <p class="card-small-text" id="client-name"></p>
-            <div class="link-list text-center">
-              <a href="../client/?id=1" id="client-link">View Client details</a>
-            </div>
+            <a class="client-info">
+              <img
+                src="https://placekitten.com/50/50"
+                alt=""
+                class="card-small-image profile-pic"
+              />
+              <p class="card-small-text" id="client-link"></p>
+            </a>
           </div>
         </div>
       </section>
