logout button class change for navbar to have logout soon ...

--- a/web/template.html
+++ b/web/template.html
@@ -92,7 +92,7 @@
           width="50"
           height="50"
         />
-        <p id="logout" class="material-symbols-outlined dimmed">logout</p>
+        <p class="logout material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
     <main>
