Mobile logout button added everywhere

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -44,6 +44,12 @@
               <span class="nav-description">My Profile</span>
             </a>
           </li>
+          <li class="mobile-only">
+            <p class="logout">
+              <span class="material-symbols-outlined">logout</span>
+              <span class="nav-description">Logout</span>
+            </p>
+          </li>
         </ul>
       </nav>
     </aside>
