member overview in both project and manger view now have current assigned worker hours as a lil green box

--- a/web/manager/index.html
+++ b/web/manager/index.html
@@ -81,37 +81,9 @@
         <div class="small-cards-wrapper" id="project-overview-wrapper"></div>
       </section>
 
-      <section class="card">
+      <section class="card" id="user-overview-wrapper">
         <h2 class="title-card">Employee Overview</h2>
-        <div class="wrap-grid">
-          <!-- (a[href="../profile?id=$"].card-small.bg-accent>img[src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50"]+div.flex-row>h3{Employee $}+p.dimmed{Role}) * 7 -->
-          <a href="../profile/?id=1" class="card-small bg-accent">
-            <img
-              src="https://placekitten.com/50/50"
-              alt="User Profile Picture"
-              class="profile-pic"
-              width="50"
-              height="50"
-            />
-            <div class="flex-row">
-              <h3>Employee 1</h3>
-              <p class="dimmed">Role</p>
-            </div>
-          </a>
-          <a href="../profile?id=7" class="card-small bg-accent">
-            <img
-              src="https://placekitten.com/50/50"
-              alt="User Profile Picture"
-              class="profile-pic"
-              width="50"
-              height="50"
-            />
-            <div class="flex-row">
-              <h3>Employee 7</h3>
-              <p class="dimmed">Role</p>
-            </div>
-          </a>
-        </div>
+        <div class="wrap-grid member-overview" id="user-overview"></div>
       </section>
     </main>
 
