--- a/web/project/index.html
+++ b/web/project/index.html
@@ -168,7 +168,10 @@
           <a href="#">Team 1</a>
         </div> -->
 
-        <div class="project-members-wrap" id="project-members-wrap"></div>
+        <div
+          class="project-members-wrap member-overview"
+          id="project-members-wrap"
+        ></div>
       </section>
     </main>
   </body>
